tests/snapshots/examples_fixtures/Debug__module_cycle_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/Debug/module_cycle_error.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `Debug.ModuleGraphCycleA` to import.

  examples/Debug/module_cycle_error.flx:1:1
  |
1 | import Debug.ModuleGraphCycleA
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Debug.ModuleGraphCycleA.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Debug.ModuleGraphCycleA` under roots: examples/Debug, src (imported from examples/Debug/module_cycle_error.flx).
== stdout ==
<not executed>
